# prm-attack

./: .gitignore  README.md  TODO.md  pyproject.toml  restructure.md
dissection/: access_prm.py  backprop_prm.py  dissect_prm.py  extract_prm_embeddings.py  tokenMapSense.pickle
scripts/: cross_entropy.py  prefix_epochs3_batch2_nvecs15_lr0.01_size2000.pt  prefix_epochs5_batch2_nvecs1_lr0.01_size2000.pt  serve_prm.sh  simple_sgd.py  test.py  training.py
src/models/: prm.py  tokenizer.py
src/prm_attack/: config.py
src/prm_attack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prm_attack/analysis/: correlation.py  statistics.py
src/prm_attack/attacks/: sgd.py
src/prm_attack/models/: clearskywork.py  skywork_tokenizer.py
src/prm_attack/prm_attack.egg-info/: SOURCES.txt  top_level.txt
tests/: conftest.py  prm_test.py  test_prm.py
